tox.ini: Pin pytest-runner<2.12 on EOL Python 2.6
pytest-runner 2.12 dropped support for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,8 @@ deps =
     green,pytest: coverage<4; python_version == '3.2'
     green: backports.shutil_get_terminal_size>=1.0.0; python_version=="3.2"
     green: green
+    pytest: pytest-runner; python_version != '2.6'
+    pytest: pytest-runner<2.12; python_version == '2.6'
     pytest: pytest-cov
     pytest: codecov
     v26x: flake8>=2.6.2,<2.7
