Pin pyflakes<2 on EOL Python 2.6,3.2 and 3.3
pyflakes 2 desupported Python 2.6,3.2 and 3.3

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ deps =
     v210: flake8==2.1.0
     v200: flake8==2.0
     v240,v230,v224,v220: mccabe==0.2.1
+    v200,v210: pyflakes<2; python_version != '2.7' and python_version < '3.4'
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
     v25x,v250,v241: flake8-docstrings
