--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,11 @@ deps =
     v200,v210: pyflakes<2; python_version != '2.7' and python_version < '3.4'
     v230,v220,v224: pyflakes==0.8.1
     v220: pep8==1.5.7
-    v25x,v250,v241: flake8-docstrings
+    # pydocstyle 2 uses syntax incompatible with Python 2.6
+    # pydocstyle 2 needs snowballstemmer, which doesnt support 3.2
+    v25x,v250,v241: pydocstyle<2; python_version == '2.6' or python_version == '3.2'
+    v25x,v250,v241: flake8-docstrings<1.1.0; python_version == '2.6' or python_version == '3.2'
+    v25x,v250,v241: flake8-docstrings; python_version == '2.7' or python_version > '3.3'
     v240,v230: flake8-docstrings==0.2.1
     v224,v220: flake8-docstrings==0.2.0
     # The following are non-core extensions
