Pin flake8-debugger<3 on EOL Python 2.6
flake8-debugger 3 dropped support for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,8 @@ deps =
     # The following are non-core extensions
     v250,v241: flake8-future-import
     v250,v241: flake8-string-format
-    v250,v241: flake8-debugger
+    v250,v241: flake8-debugger<3; python_version == '2.6'
+    v250,v241: flake8-debugger; python_version > '2.6'
     v250,v241: flake8-print
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
