--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,8 @@ deps =
     v250,v241: flake8-string-format
     v250,v241: flake8-debugger<3; python_version == '2.6'
     v250,v241: flake8-debugger; python_version > '2.6'
-    v250,v241: flake8-print
+    v250,v241: flake8-print<3; python_version == '2.6'
+    v250,v241: flake8-print; python_version > '2.6'
     v250,v241: pep8-naming
     v250,v241: flake8-pep3101
     v250,v241: hacking
