Pin flake8-naming<0.7 on EOL Python 2.6 and 3.2
flake8-naming 0.7 dropped support for Python 2.6 and 3.2

Also add a putty rule in tox.ini to ignore N807 on
Python 2.6 and 3.2

--- a/tox.ini
+++ b/tox.ini
@@ -64,7 +64,8 @@ deps =
     v250,v241: flake8-debugger; python_version > '2.6'
     v250,v241: flake8-print<3; python_version == '2.6'
     v250,v241: flake8-print; python_version > '2.6'
-    v250,v241: pep8-naming
+    v250,v241: pep8-naming<0.7; python_version == '2.6' or python_version == '3.2'
+    v250,v241: pep8-naming; python_version == '2.7' or python_version > '3.2'
     v250,v241: flake8-pep3101
     v250,v241: hacking
     v250,v241: flake8-coding<1.3
@@ -112,6 +113,7 @@ putty-ignore =
     flake8_putty/config.py : +FI11
     flake8_putty/config.py , /return / : +S001
     /(__str__|__unicode__)/,/__repr__/ : +D105,N802
+    /(__str__|__unicode__)/, python_version == '2.6' or python_version == '3.2' : +N807
     tests/ : +D102,F481,FI11,I100,L103,T000
     tests/test_integration.py : +L102
     # https://github.com/timothycrosley/isort/issues/737
