Add explicit pydocstyle on Python 2.6
flake8-pep3101 implicitly depends on pycodestyle, which is not
otherwise a dependency on Python 2.6 with all the varied rules
here for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,9 @@ deps =
     v250,v241: flake8-print; python_version > '2.6'
     v250,v241: pep8-naming<0.7; python_version == '2.6' or python_version == '3.2'
     v250,v241: pep8-naming; python_version == '2.7' or python_version > '3.2'
+    # flake8-pep3101 depends on pycodestyle, which isnt a dependency on py26
+    # with all the varied rules here for py26
+    v250,v241: pycodestyle; python_version == '2.6'
     v250,v241: flake8-pep3101
     v250,v241: hacking
     v250,v241: flake8-coding<1.3
