Pin hacking<0.11 on EOL Python 3.2 and 3.3
hacking 0.11 dropped support for Python 3.2 and 3.3

Also deselect hacking on Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -70,7 +70,8 @@ deps =
     # with all the varied rules here for py26
     v250,v241: pycodestyle; python_version == '2.6'
     v250,v241: flake8-pep3101
-    v250,v241: hacking
+    v250,v241: hacking<0.11; python_version == '3.3' or python_version == '3.2'
+    v250,v241: hacking; python_version == '2.7' and python_version > '3.3'
     v250,v241: flake8-coding<1.3
     v250,v241: flake8-tuple
     # https://github.com/aleGpereira/flake8-mock/issues/3
