Deselect flake8-tidy-imports on Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -76,7 +76,7 @@ deps =
     # https://github.com/aleGpereira/flake8-mock/issues/3
     v250,v241: flake8-mock ; sys_platform != 'win32' or python_version < '3'
     v250,v241: flake8-dodgy
-    v250,v241: flake8-tidy-imports
+    v250,v241: flake8-tidy-imports; python_version > '2.6'
     # flake8-import-order is similar to a hacking rule:
     v250,v241: flake8-import-order<0.9; python_version == '2.6'
     v250,v241: flake8-import-order; python_version > '2.6'
