--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,8 @@ deps =
     v250,v241: flake8-dodgy
     v250,v241: flake8-tidy-imports
     # flake8-import-order is similar to a hacking rule:
-    v250,v241: flake8-import-order
+    v250,v241: flake8-import-order<0.9; python_version == '2.6'
+    v250,v241: flake8-import-order; python_version > '2.6'
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint ; python_version > '2.6'
     v250,v241: flake8-strict ; python_version > '2.6'
