--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,8 @@ deps =
     v250,v241: flake8-import-order<0.9; python_version == '2.6'
     v250,v241: flake8-import-order; python_version > '2.6'
     v250,v241: flake8-exact-pin
-    v250,v241: ebb-lint ; python_version > '2.6'
+    v250,v241: ebb-lint<0.16.1.0; python_version == '3.2'
+    v250,v241: ebb-lint; python_version > '2.6' and python_version != '3.2'
     v250,v241: flake8-strict ; python_version > '2.6'
 
     # The following are run in a different toxenv,
