Pin dependencies of flake8-isort
isort 4.3.0 dropped support for Python 2.6 and 3.3

testfixtures 6 dropped support for Python 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -92,6 +92,8 @@ deps =
 
     # similar to flake8-tidy-imports/flake8-import-order:
     # isort uses customised rules in setup.cfg to behave like flake8-import-order
+    v230,v224: isort<4.3.0; python_version == '2.6' or python_version == '3.3'
+    v230,v224: testfixtures<6.0.0; python_version == '2.6'
     v230,v224: flake8-isort<2
 
     # flake8-future is similar to flake8-future-import:
