tox.ini: Deselect ebb-lint on Python 3.6+
ebb-lint does not support Python 3.6+ yet.

--- a/tox.ini
+++ b/tox.ini
@@ -83,7 +83,7 @@ deps =
     v250,v241: flake8-import-order; python_version > '2.6'
     v250,v241: flake8-exact-pin
     v250,v241: ebb-lint<0.16.1.0; python_version == '3.2'
-    v250,v241: ebb-lint; python_version > '2.6' and python_version != '3.2'
+    v250,v241: ebb-lint; python_version > '2.6' and python_version != '3.2' and python_version < '3.6'
     v250,v241: flake8-strict ; python_version > '2.6'
 
     # The following are run in a different toxenv,
